--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,4 @@
-{
+{       
   "development": {
     "username": "root",
     "password": "password",
@@ -16,11 +16,6 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "port": 3306,
-    "dialect": "mysql"
+    "use_env_variable": "JAWSDB_URL"
   }
 }
