--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
+    "gh-pages": "^3.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
@@ -14,6 +15,11 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "build": "cd client && npm run build",
+    "seed": "cd seeds && node seed",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
