--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bcrypt": "^5.0.1",
     "concurrently": "^6.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "gh-pages": "^3.1.0",
     "if-env": "^1.0.4",
     "mysql": "^2.18.1",
