--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "react-router": "^5.2.0",
     "sequelize": "^6.5.0"
   },
   "devDependencies": {},
