--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "sequelize": "^6.5.0"
+    "sequelize": "^6.5.0",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {},
   "scripts": {
